# async_fastapi

./: .dockerignore  AZURE_DEPLOYMENT_SUMMARY.md  CICD_SETUP.md  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  celerybeat-schedule  deploy.sh  docker-compose.azure.yml  pyproject.toml  requirements.txt
.github/workflows/: azure-deploy.yml
app/: celery_app.py  main.py  scheduled_tasks.py  tasks.py
infrastructure/: main.bicep
