[project]
name = "async-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery==5.3.4",
    "fastapi==0.104.1",
    "flower==2.0.1",
    "pika==1.3.2",
    "redis==5.0.1",
    "uvicorn[standard]==0.24.0",
    "watchdog==3.0.0",
]
